--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,14 @@ dependencies = []
 
 [tool.uv]
 package = false
+
+
+[tool.ruff.lint]
+extend-select = [
+    "D",    # pydocstyle
+]
+
+
+[tool.ruff.lint.pydocstyle]
+# Enforces PEP-257 docstrings
+convention="pep257"
