Ruff formatter is go, too. I let it change all my quotes. I could have stopped it.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ extend-select = [
 [tool.ruff.lint.pydocstyle]
 # Enforces PEP-257 docstrings
 convention="pep257"
+
+
+[tool.ruff.format]
+docstring-code-format=true
