REUSE pre-commit hook and licenses, plus a few simple hooks from pre-commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+# Copyright (C) 2025 Tasos Alvas <tasos.alvas@qwertyuiopia.com>
+# SPDX-License-Identifier: AGPL-3.0-or-later
 /*
 !/tasks.py
 !/invoke.yaml.example
 !/local_tasks.py.example
 !/.gitignore
 !/README.md
-!/LICENSE
+!/LICENSES
+!/REUSE.toml
 !/spdiu/
 !/uv.lock
 !/pyproject.toml
