--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+# Copyright (C) 2025 Tasos Alvas <tasos.alvas@qwertyuiopia.com>
+# SPDX-License-Identifier: AGPL-3.0-or-later
 [project]
 name = "spdiu"
 version = "0.1.0"
@@ -32,5 +34,6 @@ docstring-code-format=true
 [dependency-groups]
 dev = [
     "pre-commit>=4.5.1",
+    "reuse>=6.2.0",
     "ruff>=0.14.10",
 ]
