Enabled pytest strict mode, added test for util.write_dat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ docstring-code-format=true
 
 [tool.pytest]
 minversion = "9.0"
+strict = true
 addopts = [
     "--import-mode=importlib",
     "-p no:legacypath",
