siu: The SpdIU command - Subclassed Program and Config from Invoke into the `siu` command - tasks.py lives in the module - The regular tasks.py is needed for basepath, otherwise it's the user's. CC0 - siu installs a minimal tasks.py to mark a base dir - `invoke.yaml` files are now `spdiu.yaml`
Gotta update the doc. Recommended install now is probably `uv`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,17 @@ dev = [
     "ruff>=0.14.10",
 ]
 
+[project.scripts]
+siu = "spdiu.cli:main"
+
+
+[build-system]
+requires = ["uv_build>=0.9.18,<0.10.0"]
+build-backend = "uv_build"
+
 [tool.uv]
-package = false
+package = true
+
 
 [tool.ruff.lint]
 extend-select = [
