s[pd]iu client and spdiu.yaml integration - two names for the binary, spdiu and siu in pypackage - siu -i now produces a working starter tasks.py file - defaults now live in spdiu.config.SpdIUConfig.defaults - replaced inv and invoke.yaml in doc

--- a/src/spdiu/templates/spdiu.yaml
+++ b/src/spdiu/templates/spdiu.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 # Example configuration for Shattered Pixel Dungeon Invoke Utilities
-# Copy it to invoke.yaml and modify it to override default settings.
+# Copy it to spdiu.yaml and modify it to override default settings.
 
 # SpdIU config namespace:
 # At least one setting has to be set in it for merging to function correctly.
