--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,39 @@ authors = [
     {name = "Tasos Alvas", email = "tasos.alvas@qwertyuiopia.com"}
 ]
 license = "AGPL-3.0-or-later"
+license-files = ["LICENSES/*.txt"]
 readme = "README.md"
 requires-python = ">=3.11"
+
+# https://pypi.org/classifiers/
+classifiers = [
+    "Environment :: Console",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: End Users/Desktop",
+    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Games/Entertainment",
+    "Topic :: Games/Entertainment :: Role-Playing",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+]
+
 dependencies = [
     "invoke>=2.2.1",
 ]
+
+
+[project.urls]
+Github = "https://github.com/tasosalvas/spdiu"
+Issues = "https://github.com/tasosalvas/spdiu/issues"
+
+
+[project.scripts]
+siu = "spdiu.cli:main"
+spdiu = "spdiu.cli:main"
+
 
 [dependency-groups]
 dev = [
@@ -21,10 +49,6 @@ dev = [
     "reuse>=6.2.0",
     "ruff>=0.14.10",
 ]
-
-[project.scripts]
-siu = "spdiu.cli:main"
-spdiu = "spdiu.cli:main"
 
 
 [build-system]
