--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: astral-sh/setup-uv@v7
       - name: pre-commit linters
-        run: uv run pre-commit --all-files
+        run: uv run pre-commit run --all-files
       # - name: Prettier markdown
       #   run: npx prettier --prose-wrap always --check "**/*.md"
 
